Movement done, added balls, score etc.

--- a/pacman-new.vcxproj
+++ b/pacman-new.vcxproj
@@ -105,7 +105,7 @@
     <ClInclude Include="utils.h" />
     <ClInclude Include="wall.h" />
     <ClInclude Include="sprite.h" />
-    <ClInclude Include="player.h" />
+    <QtMoc Include="player.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="res.txt" />
