Map loading and refactor

--- a/pacman-new.vcxproj.filters
+++ b/pacman-new.vcxproj.filters
@@ -58,6 +58,9 @@
     <ClCompile Include="utils.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ui.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="gameview.h">
@@ -81,6 +84,9 @@
       <Filter>Header Files</Filter>
     </QtMoc>
     <QtMoc Include="player.h">
+      <Filter>Header Files</Filter>
+    </QtMoc>
+    <QtMoc Include="ui.h">
       <Filter>Header Files</Filter>
     </QtMoc>
   </ItemGroup>
