--- a/pacman-new.vcxproj
+++ b/pacman-new.vcxproj
@@ -90,6 +90,7 @@
   <ItemGroup>
     <ClCompile Include="player.cpp" />
     <ClCompile Include="sprite.cpp" />
+    <ClCompile Include="ui.cpp" />
     <ClCompile Include="utils.cpp" />
     <ClCompile Include="wall.cpp" />
     <QtRcc Include="resource.qrc" />
@@ -103,6 +104,7 @@
   <ItemGroup>
     <QtMoc Include="gamescene.h" />
     <ClInclude Include="gameview.h" />
+    <QtMoc Include="ui.h" />
     <ClInclude Include="utils.h" />
     <ClInclude Include="wall.h" />
     <ClInclude Include="sprite.h" />
