--- a/pacman-new.vcxproj.filters
+++ b/pacman-new.vcxproj.filters
@@ -78,9 +78,6 @@
     <ClInclude Include="enemy.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="player.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="res.txt" />
@@ -93,6 +90,9 @@
       <Filter>Header Files</Filter>
     </QtMoc>
     <QtMoc Include="animatedsprite.h">
+      <Filter>Header Files</Filter>
+    </QtMoc>
+    <QtMoc Include="player.h">
       <Filter>Header Files</Filter>
     </QtMoc>
   </ItemGroup>
