Replay both directions: work in progress

--- a/pacman-new.vcxproj
+++ b/pacman-new.vcxproj
@@ -91,6 +91,7 @@
     <ClCompile Include="animatedsprite.cpp" />
     <ClCompile Include="enemy.cpp" />
     <ClCompile Include="player.cpp" />
+    <ClCompile Include="replay.cpp" />
     <ClCompile Include="sprite.cpp" />
     <ClCompile Include="ui.cpp" />
     <ClCompile Include="utils.cpp" />
@@ -108,6 +109,8 @@
     <ClInclude Include="enemy.h" />
     <ClInclude Include="gameview.h" />
     <QtMoc Include="ui.h" />
+    <ClInclude Include="interfaces.h" />
+    <ClInclude Include="replay.h" />
     <ClInclude Include="utils.h" />
     <ClInclude Include="sprite.h" />
     <QtMoc Include="player.h" />
